# gws-harness

./: CHANGELOG.md  README.md  pyproject.toml
docs/: quickstart.md
lib/: daemon.sh  ingress.sh
