[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "garc-gws-agent-runtime"
version = "0.1.0"
description = "Google Workspace Agent Runtime CLI"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
]

[tool.setuptools.packages.find]
where = ["scripts"]
